force-app/main/default/objects/VS_Notification_Log__c/VS_Notification_Log__c.object-meta.xml
<CustomObject>
    <label>VS Notification Log</label>
    <pluralLabel>VS Notification Logs</pluralLabel>
    <description>F-001 slot-booking-core (VS-17, EP-07). Log-only target for the SMS/notification seam (D-014): every notification write (booking confirmation, reminder, OTP-adjacent) is recorded here regardless of whether a real provider is wired up. OWD Private per design §2.2/§2.5 table row 9 (facility-staff visibility is not implied by relationship; access governed separately, Annexure C5). Retention class (Annexure C4): SMS logs 1 yr. No Aadhaar or extra person data stored (§2.5) — only references to Patient/Appointment plus message metadata.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <displayFormat>NLOG-{00000}</displayFormat>
        <label>Notification Log Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>