force-app/main/default/objects/VS_Notification_Log__c/fields/VS_Channel__c.field-meta.xml
<CustomField>
    <fullName>VS_Channel__c</fullName>
    <label>Channel</label>
    <description>Delivery channel for this notification. Values match design exactly: SMS, Email. SMS is default because SMS is the primary citizen-facing channel (Annexure C7).</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>