force-app/main/default/objects/VS_Notification_Log__c/fields/VS_Helpline_Included__c.field-meta.xml
<CustomField>
    <fullName>VS_Helpline_Included__c</fullName>
    <label>Helpline Included</label>
    <description>Checked when the helpline number is present in the message body, as required for every actionable transactional SMS template (Annexure C7.3). Defaults to false; templates that omit it are a compliance defect.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>