force-app/main/default/objects/VS_Notification_Log__c/fields/VS_Message_Body__c.field-meta.xml
<CustomField>
    <fullName>VS_Message_Body__c</fullName>
    <label>Message Body</label>
    <description>The rendered message text as sent/logged. Must never contain Aadhaar numbers or any data beyond Annexure C1 minimization (name, DOB, gender, mobile, locality/pin, email) plus appointment/vaccination-event details already permitted on VS_Appointment__c. Synthetic data only in dev/test orgs (C3.2).</description>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>