force-app/main/default/objects/VS_Notification_Log__c/fields/VS_Provider__c.field-meta.xml
<CustomField>
    <fullName>VS_Provider__c</fullName>
    <label>Provider</label>
    <description>Name of the SMS/Email provider that handled (or would handle) this notification, e.g. "LogOnly" in the POC (D-014, vendor undecided per Annexure C7). Kept as plain text so the eventual VS_ISmsProvider implementation can be swapped without a schema change.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>