force-app/main/default/objects/VS_Notification_Log__c/fields/VS_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>VS_Sent_At__c</fullName>
    <label>Sent At</label>
    <description>Timestamp the notification was actually dispatched by the provider. Left blank while VS_Status__c is Logged; populated when status transitions to Sent (or attempted, for Failed) by the future live-provider integration.</description>
    <type>DateTime</type>
</CustomField>