force-app/main/default/objects/VS_Notification_Log__c/fields/VS_Status__c.field-meta.xml
<CustomField>
    <fullName>VS_Status__c</fullName>
    <label>Status</label>
    <description>Delivery status of this notification. Values match design exactly: Logged (written but not dispatched — the POC log-only seam default, D-014), Sent, Failed.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logged</fullName>
                <default>true</default>
                <label>Logged</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>