force-app/main/default/objects/VS_Notification_Log__c/fields/VS_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>VS_Template_Name__c</fullName>
    <label>Template Name</label>
    <description>Name/reference of the DLT-registered transactional template used for this message (Annexure C7). Free text in the POC log-only seam; the eventual live SMS provider integration will validate this against the DLT-registered template catalogue.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>